[tool.poetry]
name = "ready"
version = "0.5.2"
description = "Take control of the event loop with simplified task management and queueing"
authors = ["Carl Oscar Aaro <hello@carloscar.com>"]
homepage = "https://github.com/kalaspuff/ready"
repository = "https://github.com/kalaspuff/ready"
keywords = ["ready"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8 || ^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-black = "^0.2.0"
flake8-isort = "^4.0.0"
isort = { version = "^5.5.3", extras = ["pyproject"] }
pytest = "^6.1.0"
pytest-cov = "^2.10.0"
black = "=20.8b1"
mypy = "^0.782"
codecov = "^2.1.9"

[tool.black]
line-length = 120
target_version = ["py36", "py37", "py38"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "ready"
skip = ".mypy_cache,__pycache__"
